fixed bug with :focus on bathrooms subnav & increased width of nav at smaller breakpoints to stop nav items wrapping. Login, cart widget will need to be made smaller

--- a/assets/less/reece-global.less
+++ b/assets/less/reece-global.less
@@ -248,6 +248,10 @@ h1, h2, h3, h4, h5, h6 {
 // Main Header Module
 //====================================================================================================================================
 //====================================================================================================================================
+// override default bootstrap behaviour
+.navbar-container .nav > li > a:focus{
+  background-color:inherit;
+}
 
 .navbar-fixed-top .brand {
     margin-left: 0px;
@@ -1267,7 +1271,7 @@ margin: 0 0 0 12px;
 @media (max-width: 1180px) {
 
     .navbar .nav {
-    width: 594px;
+    width: 620x;
     }
 
 
